--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -12,21 +13,28 @@
 </head>
 
 <body class="bg-zinc-900">
-    <div class="flex text-white gap-2">
-        <div class="w-[60vw] p-2">
-            <h1 class="py-2 text-2xl text-zinc-100 font-bold">Recent bookmarks</h1>
-            <div class="columns-2 space-y-3 gap-2 flex-wrap" id="bookmarks">
-                <div class="flex space-x-2 items-center p-2 rounded-lg text-base bg-zinc-600 text-zinc-200">
-                    <img class="w-7 h-7 rounded-lg" src="./mmbrand.png" alt="">
-                    <div class="truncate text-ellipsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim,
-                        sint?</div>
+    <div class="flex gap-2">
+        <div class="w-[70%] flex text-sm">
+            <div class="p-3 flex-1 w-[33%]">
+                <h1 class="mb-5 mt-2 text-2xl text-zinc-100 font-bold">Shortcut Links</h1>
+                <button class="border p-2 text-zinc-200 w-full mb-4 rounded">+ Add shortcut link</button>
+                <div class="columns-2 gap-2 space-y-3" id="shorts"></div>
+            </div>
+            <div class="p-3 flex-1 w-[33%]">
+                <h1 class="mb-5 mt-2 text-2xl text-zinc-100 font-bold">Recent BookMarks</h1>
+                <div class="columns-1 space-y-4" id="bookmarks"></div>
+            </div>
+            <div class="p-3 flex-1 w-[33%]">
+                <h1 class="mb-5 mt-2 text-2xl text-zinc-100 font-bold">Quick Notes</h1>
+                <div>
+                    <textarea name="" id=""  rows="5" class="bg-zinc-700 w-full rounded border-0"></textarea>
                 </div>
             </div>
         </div>
-        <div class="w-[40vw] flex flex-col h-screen">
-            <div class="flex py-2 pr-5 text-3xl justify-between items-end">
+        <div class="w-[30%] flex flex-col h-screen">
+            <div class="flex my-3 pr-5 text-2xl justify-between items-end">
                 <h1 class="text-zinc-100 font-bold">Tech Stories</h1>
-                <div class="text-[#2B3467]">
+                <div class="text-zinc-400">
                     <button id="gridView">
                         <span class="text-2xl material-symbols-outlined">grid_view</span>
                     </button>
