--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="tailwind.min.js"></script>
-
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -48,7 +47,7 @@
             </div>
         </div>
     </div>
-    <script src="./toast.min.js"></script>
+    <script src="toast.min.js"></script>
     <script src="script.js"></script>
     <script src="links.js"></script>
 
