--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="p-3 flex-1 w-[33%]">
                 <h1 class="mb-5 mt-2 text-2xl text-zinc-100 font-bold">Quick Notes</h1>
                 <div>
-                    <textarea name="" id=""  rows="5" class="bg-zinc-700 w-full rounded border-0"></textarea>
+                    <textarea rows="5" class="bg-zinc-700 w-full rounded border-0"></textarea>
                 </div>
             </div>
         </div>
