--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Chrome New Tab">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="tailwind.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="./scripts/tailwind.min.js"></script>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body class="bg-zinc-900">
@@ -26,7 +26,18 @@
             <div class="p-3 flex-1 w-[33%]">
                 <h1 class="mb-5 mt-2 text-2xl text-zinc-100 font-bold">Quick Notes</h1>
                 <div>
-                    <textarea rows="5" class="bg-zinc-700 w-full rounded border-0"></textarea>
+                    <textarea style="resize: none;" rows="3"
+                        class="bg-zinc-700 focus:ring-slate-400 text-zinc-200 w-full rounded border-0"
+                        placeholder="Add Quick Note"></textarea>
+                    <div id="notes">
+                        <div class="flex group justify-between items-center rounded-lg bg-zinc-700 text-zinc-100 p-2">
+                            <a href="${item}" class="pl-2 overflow-hidden text-ellipsis">${item}</a>
+                            <div class="block shrink-0 invisible group-hover:visible pl-2">
+                                <button><span class="text-base material-symbols-outlined">edit</span></button>
+                                <button><span class="text-base material-symbols-outlined">clear</span></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -47,9 +58,9 @@
             </div>
         </div>
     </div>
-    <script src="toast.min.js"></script>
-    <script src="script.js"></script>
-    <script src="links.js"></script>
+    <script src="./scripts/toast.min.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/links.js"></script>
 
 </body>
 
