--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,11 +14,13 @@
 
     <div class="mt-8">
         <h2 class="text-lg font-bold mb-2">Save URL</h2>
+        <img id="favicon_image" src="../images/minsea.webp" class="w-5 h-5" alt="">
         <div class="flex flex-col sm:flex-row gap-2">
             <input type="text" id="url-input" placeholder="URL" autofocus
                 class="bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent border border-gray-300 rounded-md py-2 px-4">
             <input type="text" id="name-input" placeholder="Name (optional)"
                 class="bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent border border-gray-300 rounded-md py-2 px-4">
+            <input type="hidden" id="tab-icon">
             <button type="button" id="save-button"
                 class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                 Save
