--- a/newtab/newtab.html
+++ b/newtab/newtab.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Tab</title>
-    <link rel="stylesheet" href="./newtab.css">
+    <link rel="stylesheet" href="./newtab.css" type="text/css">
 </head>
 
 <body>
     <div class="info_container">
         <div class="link_N_bookmark">
-            <div class="card time">
+            <div class="card time shadow">
                 <h1>12:01</h1>
                 <p>27th March, Monday</p>
             </div>
-            <div class="card quick_links">
-                <h2 class="text-2xl font-bold">Quick Links</h2>
+            <div class="card quick_links shadow">
+                <h1 class="header">Quick Links</h1>
                 <div id="recent-urls-list"></div>
                 <div class="form">
                     <input type="text" id="urlInput" placeholder="url">
@@ -25,38 +27,54 @@
                 <button id="showQLForm">+ Add QL</button>
             </div>
             <div class="card book_marks">
-                <h2 class="text-2xl">Bookmarks</h2>
+                <h1 class="header">Bookmarks</h1>
                 <ul id="bookmarks-list"></ul>
             </div>
         </div>
-        <div class="card notes">
-            <h2>Notes List</h2>
-            <div id="notes-list"></div>
-            <div class="form">
-                <textarea id="noteInput" placeholder="enter note"></textarea>
-                <button id="addNote">Add</button>
+        <div class="card notes shadow">
+            <h1 class="header">Notes</h1>
+            <button id="clearnote">clear</button>
+            <div class="note_form">
+                <textarea class="notes_input" id="noteInput" placeholder="Type a quick note"></textarea>
+                <button class="note_add_btn" id="addNote">Add</button>
             </div>
+            <div class="notesList" id="notes-list"></div>
         </div>
     </div>
-    <div class="story_container">`
-        <h2>Tech Stories</h2>
+    <div class="story_container">
+        <div class="titleContainer">
+            <h2>Tech Stories</h2>
+            <div class="story_layouts">
+                <button class="layout_btn" aria-label="listview" id="layout_1">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 010 3.75H5.625a1.875 1.875 0 010-3.75z" />
+                    </svg>
+                </button>
+                <button class="layout_btn" aria-label="gridview" id="layout_2">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3.75 6A2.25 2.25 0 016 3.75h2.25A2.25 2.25 0 0110.5 6v2.25a2.25 2.25 0 01-2.25 2.25H6a2.25 2.25 0 01-2.25-2.25V6zM3.75 15.75A2.25 2.25 0 016 13.5h2.25a2.25 2.25 0 012.25 2.25V18a2.25 2.25 0 01-2.25 2.25H6A2.25 2.25 0 013.75 18v-2.25zM13.5 6a2.25 2.25 0 012.25-2.25H18A2.25 2.25 0 0120.25 6v2.25A2.25 2.25 0 0118 10.5h-2.25a2.25 2.25 0 01-2.25-2.25V6zM13.5 15.75a2.25 2.25 0 012.25-2.25H18a2.25 2.25 0 012.25 2.25V18A2.25 2.25 0 0118 20.25h-2.25A2.25 2.25 0 0113.5 18v-2.25z" />
+                    </svg>
+                </button>
+            </div>
+            <div class="vert-divider"></div>
+            <button title="Saved Stories" class="layout_btn" id="savedStories">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M16.5 3.75V16.5L12 14.25 7.5 16.5V3.75m9 0H18A2.25 2.25 0 0120.25 6v12A2.25 2.25 0 0118 20.25H6A2.25 2.25 0 013.75 18V6A2.25 2.25 0 016 3.75h1.5m9 0h-9" />
+                </svg>
+
+            </button>
+        </div>
         <div class="padContainer">
-            <div class="storyDiv" id="stories">
-                <div>
-                    <a>
-                        <img width="20%"
-                            src="https://res.cloudinary.com/practicaldev/image/fetch/s--sYBQr0Pf--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/t4payd7ngd785081vqg5.png">
-                        What's the most mind-blowing AI example you've seen?
-                    </a>
-                    <button data-id="1414130">
-                        <span data-id="1414130" class="material-symbols-outlined">1414130 - favorite</span>
-                    </button>
-                    <hr>
-                </div>
-            </div>
+            <div class="storyDiv image" id="stories"></div>
         </div>
     </div>
-    <script src="newtab.js"></script>
+    <script src="newtab.js" type="text/javascript"></script>
 </body>
 
 </html>
