--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
     <script src="../scripts/tailwind.min.js"></script>
 </head>
 
-<body class="p-3 flex flex-col h-full items-center justify-center bg-gray-200">
+<body class="w-64 p-3 flex flex-col h-full items-center justify-center bg-gray-200">
     <button id="go-to-options" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
         Go to options
     </button>
